# PsyModTraining

./: .gitignore  .pre-commit-config.yaml  11.20.ipynb  11.24.ipynb  README.md  pyproject.toml  requirements.txt
01.Fingerprint&PCA/: 40_Psychedelic_drug.csv  Fingerprint_PCA.ipynb  PCA_variance.csv  README.md
01.Input_Exploration/: README.md
01.Input_Exploration/a.Fingerprint&PCA/: Fingerprint_PCA.ipynb  Get_fingerprint.ipynb  MACCS_fingerprints.csv  PCA_variance.csv  PCA_variance_combinationFP.csv  rank.ipynb
01.Input_Exploration/b.gProtain_correlation/: gProtein_correlation.ipynb
02.ExperimentalData_rf/: MACCS_fingerprints.csv  README.md
02.ExperimentalData_rf/a.multilabel_rf/: ExperimentalData_multilabel_rf.ipynb
02.ExperimentalData_rf/b.realVal_rf/: ExperimentalData_realval_rf.ipynb  ExperimentalData_realval_rf_threshold.ipynb  receptor_emax_mapping_pivot.csv
02.ExperimentalData_rf/c.rf_singleLabel/: drug_receptor_label.csv  rf_singleLabel.ipynb
02.ExperimentalData_rf/multilabel_rf/: ExperimentalData_multilabel_rf copy.ipynb  ExperimentalData_multilabel_rf.ipynb
02.ExperimentalData_rf/realVal_rf/: ExperimentalData_realval_rf.ipynb
03.Paper_repeat/: Get_fingerprint.ipynb  PsychLight_MACCS_fingerprints.csv  README.md  rf_PsychLight_psychedelicPrediction.ipynb
04.Group-selfies/: README.md
04.Group-selfies/practice/: MACCS_model_singleLabel.ipynb  MACCS_model_singleLabel_feature_importance.ipynb  SMILES_PsychLight&all_fingerprint.csv  group_selfie_psy_testIfSameMol.ipynb  group_selfie_psy_upsetPlot.ipynb  group_selfie_training_gsf.ipynb  gsf_model.ipynb  gsf_model_realVal.ipynb  (+5 more)
Paper_repeat/: Get_fingerprint.ipynb  rf_PsychLight_psychedelicPrediction.ipynb
data/: README.md
real_value_rf/: realval_rf_multioutput.ipynb
tmp_src/: README.md  final_dataframe.py  parse_pihkal.py  parse_tihkal.py
(+23 files in other folders)
