[project]
name = "psymodtraining"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jsture", email = "jakobsturemadsen@gmail.com" }
]
dependencies = [
    "networkx>=3.4.2",
    "tqdm>=4.67.1",
    "rdkit>=2024.3.6",
    "global-chem>=1.10.0",
    "jupyterlab>=4.3.4",
    "importlib-resources>=6.4.5",
    "pre-commit>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/psymodtraining"]
