[project]
name = "psymodtraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "astunparse==1.6.3",
    "bottle==0.13.2",
    "cloudpickle==3.1.1",
    "colorlog==6.8.2",
    "gast==0.3.3",
    "global-chem==1.10.0",
    "idna==3.10",
    "joblib==1.4.2",
    "libclang==18.1.1",
    "llvmlite==0.41.1",
    "mako==1.3.6",
    "networkx==3.1",
    "numba>=0.58.1",
    "optuna==4.0.0",
    "optuna-dashboard==0.16.2",
    "protobuf>=6.31.1",
    "pubchempy==1.0.4",
    "pyasn1-modules==0.2.8",
    "pycairo==1.23.0",
    "pyyaml==6.0.2",
    "rdkit==2024.3.5",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "scipy==1.10.1",
    "seaborn==0.13.2",
    "shap==0.44.1",
    "slicer==0.0.7",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboard-plugin-wit>=1.8.1",
    "tensorflow-estimator>=2.15.0",
    "tensorflow-io-gcs-filesystem>=0.37.1",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.5",
    "upsetplot==0.9.0",
]
